@@ -2,6 +2,7 @@ libcm4all-was (1.2) unstable; urgency=low
 
   * simple: fix assertion failure after receiving STOP from web server
   * apreq: implement the query string parser
+  * istub: implement close()
 
  --   
 
